--- a/deployment.yml
+++ b/deployment.yml
@@ -2,23 +2,22 @@
 
 # Define the Namespace
 apiVersion: v1
-kind: Namespace
+kind: Namespace # abstraction layer to prevent pods from being build in base env to prevent accidental errors
 metadata:
   name: ml-app
 
-# This namespace is the common namespace for all our containers
-# It is the common identifier to access this application
 ---
-# config map to define the routing for the flask server to communicate
+
 apiVersion: v1
-kind: ConfigMap
+kind: ConfigMap # useful tool to allow easier access & modification of URL/File paths 
 metadata:
   name: flask-url
   namespace: ml-app
 data:
-  DP_POD_URL: "http://data-processing-pod/start-training"
-  INFERENCE_POD_URL: "http://inference-pod/get-model-info"
-  INF_POD_URL: "http://inference-service/predict"
+  DP_POD_URL: "http://processing-service:84/start-processing" # WORKING
+  MODEL_TRAINING_URL: "http://model-training-service:85/train" # SET TO CORRECT (?)
+  RESULTS_URL: "http://model-training-service:85/results" # SET TO CORRECT(?)
+  INF_POD_URL: "http://inference-service:83/predict" # WORKING
 
 ---
 # Flask App Deployment
@@ -28,43 +27,46 @@ metadata:
   name: flask-app
   namespace: ml-app
 spec:
-  replicas: 3 # Set 3 replicas for stability
-  minReadySeconds: 120 #s to start up the pod and wait for the rest of the pods to get created also before accepting requests to it
+  replicas: 3 # MAX 3 containers deployed
   selector:
     matchLabels:
-      chapter: flask # create with this deploylent for label: flask only
+      chapter: flask # Applies configuration to containers w/ label flask
   strategy:
-    type: RollingUpdate
+    type: RollingUpdate # Deploy/Remove/Update pods based on specs below
     rollingUpdate:
-      maxUnavailable: 1 # Allow 1 pod to be unavailable at all times
-      maxSurge: 1 # Allow 1 extra pod to be created during update
+      maxUnavailable: 1 # max 1 pod unavail at a time
+      maxSurge: 1 # max 1 extra pod avail at a time
   template:
     metadata:
       labels:
-        chapter: flask # allow flask svc to connect to it
+        chapter: flask # create from a temaplate (image) and apply label flask for svc to connect
     spec:
-      restartPolicy: Always 
       containers:
       - name: flask-container
-        image: wacktack/flask-app:latest
-        env:
+        image: wacktack/flask-app:latest # pull from flask-app image
+        env: # to get Config map variables
         - name: DP_POD_URL
           valueFrom:
             configMapKeyRef:
               name: flask-url
               key: DP_POD_URL
+        - name: MODEL_TRAINING_URL
+          valueFrom:
+            configMapKeyRef:
+              name: flask-url
+              key: MODEL_TRAINING_URL
+        - name: RESULTS_URL
+          valueFrom:
+            configMapKeyRef:
+              name: flask-url
+              key: RESULTS_URL
         - name: INF_POD_URL
           valueFrom:
             configMapKeyRef:
               name: flask-url
               key: INF_POD_URL
-        - name: INFERENCE_POD_URL
-          valueFrom:
-            configMapKeyRef:
-              name: flask-url
-              key: INFERENCE_POD_URL
         ports:
-        - containerPort: 5000 # set port 5000 for connection
+        - containerPort: 5000 # set port 5000, same as app.py
 
 ---
 # Flask app service
@@ -72,22 +74,22 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-app-service
-  namespace: ml-app
+  namespace: ml-app # deploy in same namespace to access
   labels:
-    chapter: flask # used to identify flask
+    chapter: flask # unique calling method to ensure service operates on this specific chapter
 spec:
-  type: NodePort 
+  type: NodePort  # LoadBalancer for external
   ports:
   - protocol: TCP
-    port: 5000  # External port to access
+    port: 5000  # Exposed port
     targetPort: 5000  # Flask app port inside the container
-    nodePort: 30005 # assigned nodePort
   selector:
-    chapter: flask # used to connect to label: flask
+    chapter: flask # applies to selected chapter: flask
 
 ---
 # Inference Container - Edyson
 # Configmap
+
 # Store non-confidential data
 
 apiVersion: v1
@@ -102,6 +104,9 @@ data:
 
 
 ---
+
+# Service
+
 # Service accessible from within the cluster (ClusterIP) and will sent traffic to pods
 # it manages (recieves on 80 sent to containers at 8083)
 # Does not deploy or manage pods just route traffic
@@ -117,11 +122,12 @@ spec:
     app: inference         # Labels used to identify the pods this Service targets
   ports:
   - protocol: TCP          # The protocol for the port (usually TCP)
-    port: 80               # The port that the Service exposes to the outside world
+    port: 83               # The port that the Service exposes to the outside world
     targetPort: 8083       # The port on the pod/container that the Service forwards traffic to
   type: ClusterIP          # The type of Service; ClusterIP means it's accessible only within the cluster
 
 ---
+
 # PVC
 
 # To allow request of a storage, request 4 Gi
@@ -203,44 +209,14 @@ spec:
           persistentVolumeClaim:
             claimName: store-model-pvc
 ---
-
-
-# Data Processing Deployment
+### Hai jie
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: data-processing
+  name: model-training-deployment
   namespace: ml-app
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: data-processing
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: data-processing
-    spec:
-      containers:
-      - name: data-processing-container
-        image: your-data-processing-image:latest
-        ports:
-        - containerPort: 8080
-
----
-# Model Training Deployment
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: model-training
-  namespace: ml-app
-spec:
-  replicas: 3
+  replicas: 1  # Number of pod replicas
   selector:
     matchLabels:
       app: model-training
@@ -255,83 +231,159 @@ spec:
         app: model-training
     spec:
       containers:
-      - name: model-training-container
-        image: your-model-training-image:latest
-        ports:
-        - containerPort: 8081
+      - name: model-training # model training code
+        image: 200iqkid/modeltrain # hai jie's image
+        volumeMounts:
+        - mountPath: "/app/data"  # to modify
+          name: processed-data-pv
+        - mountPath: '/mnt/saved_model'  # to modify
+          name: saved-model-volume
+
+      volumes:
+      - name: processed-data-pv # jurn jie's volume claim
+        persistentVolumeClaim:
+          claimName: processed-data-pvc
+      - name: saved-model-volume # hai jie'svolume claim
+        persistentVolumeClaim:
+          claimName: saved-model-pvc
 
 ---
-# Inference Deployment
-apiVersion: apps/v1
-kind: Deployment
+# PV for saved model
+apiVersion: v1
+kind: PersistentVolume
 metadata:
-  name: inference
+  name: saved-model-pv  # Name of the Persistent Volume for the saved model
   namespace: ml-app
 spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: inference
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: inference
-    spec:
-      containers:
-      - name: inference-container
-        image: your-inference-image:latest
-        ports:
-        - containerPort: 8082
+  capacity:
+    storage: 4Gi  
+  accessModes:
+    - ReadWriteMany  
+  hostPath:
+    path: "/mnt/saved_model"  # Path on the host machine where the model will be saved
+  persistentVolumeReclaimPolicy: Retain
+
 
 ---
-# Example Service for Data Processing
+# PVC for saved model
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: saved-model-pvc  # Name of the PVC that will request the saved model volume
+  namespace: ml-app  
+spec:
+  accessModes:
+    - ReadWriteOnce  
+  resources:
+    requests:
+      storage: 4Gi  
+
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: model-training-service  
+  namespace: ml-app
+spec:
+  selector:
+    app: model-training         # Labels used to identify the pods this Service targets
+  ports:
+  - protocol: TCP          # The protocol for the port (usually TCP)
+    port: 85               # The port that the Service exposes to the outside world
+    targetPort: 8085       # The port on the pod/container that the Service forwards traffic to
+  type: ClusterIP          # The type of Service; ClusterIP means it's accessible only within the cluster
+
+---
+### Jurn Jie
+# Service
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: data-processing-service
+  name: processing-service
   namespace: ml-app
 spec:
   selector:
     app: data-processing
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 8080
+    port: 84
+    targetPort: 8084
   type: ClusterIP
 
 ---
-# Example Service for Model Training
+
+# PV
+# allow request of storage
+
 apiVersion: v1
-kind: Service
+kind: PersistentVolume
 metadata:
-  name: model-training-service
+  name: processed-data-pv
+spec:
+  capacity:
+    storage: 4Gi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/mnt/data"
+---
+
+# PVC 
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: processed-data-pvc
   namespace: ml-app
 spec:
-  selector:
-    app: model-training
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8081
-  type: ClusterIP
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 4Gi
 
 ---
-# Example Service for Inference
-apiVersion: v1
-kind: Service
+
+# Deployment 
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: inference-service
+  name: data-processing-deployment
   namespace: ml-app
+  labels:
+    app: data-processing
 spec:
+  replicas: 3
   selector:
-    app: inference
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8082
-  type: ClusterIP
+    matchLabels:
+      app: data-processing
+  template:
+    metadata:
+      labels:
+        app: data-processing
+    spec:
+      containers:
+      - name: data-processing-container
+        image: 200iqkid/data-processing:latest
+        volumeMounts:
+        - mountPath: "/app/processed_data"
+          name: processed-data-pv
+        env:
+        - name: TRAIN_DIR
+          value: "/app/data_309/train"
+        - name: TEST_DIR
+          value: "/app/data_309/test"
+      # Connecting PVC to PV
+      volumes:
+      - name: processed-data-pv
+        persistentVolumeClaim:
+          claimName: processed-data-pvc
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  revisionHistoryLimit: 10  # Keep a history of 10 revisions for rollback
+  minReadySeconds: 5  # Minimum time a Pod should be ready before considered stable
+  progressDeadlineSeconds: 600  # Deadline for progressing the deployment   
