added edyson title to deployment in main deploy

--- a/main_deployment.yml
+++ b/main_deployment.yml
@@ -280,10 +280,11 @@ spec:
           claimName: saved-model-pvc
 
 ---
+# Deployment (4/4) - Edyson
 apiVersion: apps/v1 
 kind: Deployment   
 metadata:
-  name: inference 
+  name: inference-deployment
   namespace: ml-app 
 spec:
   replicas: 3 
