--- a/jurnjie/deployment.yaml
+++ b/jurnjie/deployment.yaml
@@ -77,7 +77,7 @@ spec:
     spec:
       containers:
       - name: data-processing-container
-        image: 200iqkid/data-processing
+        image: jurnjie/data-processing:final-build
         volumeMounts:
         - mountPath: "/app/processed_data"
           name: processed-data-pv
